# ConvectionOven

./: README.md
Housing/: Cover.STL  InnerAxle.STL  LowerHandle.STL  OuterAxle.STL  UpperHandle.STL
PCB/: .gitignore  ConvectionOven.kicad_pcb  ConvectionOven.kicad_prl  ConvectionOven.kicad_pro  ConvectionOven.kicad_sch  ConvectionOven.xml  hallsensor.kicad_sch  hotside.kicad_sch  power.kicad_sch
PCB/hall/hall/: .gitignore  hall.kicad_pcb  hall.kicad_prl  hall.kicad_pro  hall.kicad_sch
fw/: Cargo.toml  openocd.gdb
fw/.cargo/: config.toml
fw/src/: board.rs  buzzer.rs  current_sensor.rs  delay.rs  display.rs  encoder.rs  lib.rs  temp_sensor.rs
fw/src/state/: cooking.rs  halt.rs  lid.rs  manager.rs  mod.rs  pre_run.rs  ready.rs
