[package]
name = "fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = {version = "0.7.3", features = ["device"]}
stm32f3xx-hal = {version = "0.9.2", features = ["ld", "rt", "stm32f303x8", "defmt"]}
defmt ="0.3.5"
defmt-rtt = "0.4.0"
#panic-probe = {version = "0.3.1", features = ["print-defmt"]}
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.4"
rtic-monotonic = "1.0.0"
dwt-systick-monotonic = "1.1.0"
paste = "1.0.14"
enum_dispatch = "0.3.12"
hd44780-driver = "0.4.0"
heapless = "0.7.16"
max31855 = "0.1.0"
pid = "4.0.0"
libm = "0.2.8"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-